--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,5 +42,31 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./frontend:/usr/share/nginx/html:ro
 
+  rabbitmq:
+    image: rabbitmq:3.11-management
+    container_name: transcriber_rabbitmq
+    restart: unless-stopped
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    environment:
+      RABBITMQ_DEFAULT_USER: admin
+      RABBITMQ_DEFAULT_PASS: password
+
+  minio:
+    image: minio/minio:latest
+    container_name: transcriber_minio
+    restart: unless-stopped
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    environment:
+      MINIO_ROOT_USER: admin
+      MINIO_ROOT_PASSWORD: password
+      MINIO_DEFAULT_BUCKETS: bobr_bucket
+    command: server /data --console-address ":9001"
+    volumes:
+      - ./minio_data:/data
+
 volumes:
   mongo_data:
